Adicionando segundo livro

--- a/U3T1/network/config.json
+++ b/U3T1/network/config.json
@@ -9,7 +9,7 @@
   },
   "text": {
     "more": "",
-    "intro": "",
+    "intro": "Livros The Adventures of Sherlock Holmes e THE MEMOIRS OF SHERLOCK HOLMES",
     "title": "Nomes nos livros de Sherlock Holmes"
   },
   "legend": {
